# krac24

./: auto_spawn 2.sh  auto_spawn.sh  auto_spawn2.sh  auto_spawn3.sh
install/: local_setup.sh  setup.sh
install/krac_control/lib/krac_control/: gripper_test  gripper_test.py  mission_loader.py  offboard  precision_lander  vtol_fsm  vtol_fsm_P  vtol_offboard
install/krac_control/share/krac_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/krac_control/share/krac_control/cmake/: krac_controlConfig-version.cmake  krac_controlConfig.cmake
install/krac_control/share/krac_control/environment/: ament_prefix_path.dsv  path.dsv
install/krac_interfaces/share/krac_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/krac_interfaces/share/krac_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  (+13 more)
install/krac_mission/lib/krac_mission/: mission_loader  mission_loader.py
install/krac_mission/share/krac_mission/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/krac_utils/lib/krac_utils/: competition_logger
install/krac_utils/share/krac_utils/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/krac_vision/lib/krac_vision/: vision_tracker  yolo_node
install/krac_vision/share/krac_vision/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_ros_com/include/px4_ros_com/: frame_transforms.h
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control.py  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/vision_msgs/include/vision_msgs/: create_aabb.hpp
install/vision_msgs/share/vision_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/vision_msgs_rviz_plugins/lib/vision_msgs_rviz_plugins/: BoundingBox3D.py  BoundingBox3DArray.py  Detection3D.py  Detection3DArray.py
install/vision_msgs_rviz_plugins/share/vision_msgs_rviz_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  plugins_description.xml
log/: latest_build
src/krac_control/: CMakeLists.txt  package.xml
src/krac_control/src/: gripper_test.py  krac24.plan  krac24_prac.plan  offboard.cpp  precision_lander.cpp  vtol_fsm.cpp  vtol_fsm_P.cpp  vtol_offboard.cpp  way3.plan
src/krac_interfaces/: CMakeLists.txt  package.xml
src/krac_interfaces/msg/: FlightPhase.msg  TargetError.msg
src/krac_mission/: CMakeLists.txt
src/krac_mission/config/: mavros_params.yaml  vtol_params.yaml  waypoints.yaml
src/krac_mission/launch/: krac_24.launch.py  krac_24_sitl.launch.py  offboard_test.launch.py  sitl_vtol.launch.py  sitl_x500.launch.py
src/krac_mission/src/: mission_loader.py
src/krac_utils/: CMakeLists.txt
src/krac_utils/src/: competition_logger.cpp
src/krac_vision/: package.xml  setup.cfg  setup.py  vision_tracker.py
src/krac_vision/krac_vision/: landing_marker.py  vision_tracker.py
(+4546 files in other folders)
